feat: introduce service blacklist and exception handling
- Added `ServiceBlacklistConfig` to manage container blacklists.
- Introduced `ServiceBlacklistedException` and corresponding `ServiceBlacklistedExceptionMapper` for handling forbidden operations.
- Implemented unit tests for blacklist functionality and exception handling.